--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ boto==2.40.0
 Flask==0.10.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
